# doc/openapi.yml
@@ -89,17 +89,11 @@ paths:
                                     format: password
                                     description: The password.
                                     example: 'admin'
-                                re_password:
-                                    type: string
-                                    format: password
-                                    description: The password again.
-                                    example: 'admin'
                             required:
                                 - username
                                 - first_name
                                 - last_name
                                 - password
-                                - re_password
             responses:
                 '200':
                     description: OK
